feat: adiciona configuração de autenticação no swagger

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,10 @@ spring:
     driver-class-name: ${database.driver-class-name}
   profiles:
     active: ${APP_PROFILE:local}
-
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 api:
   security:
     token:
