--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
             <version>2.2.1</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>6.0.11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
