--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>6.0.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
